fix: update Partner API catalog
